syntax = "proto3";

option csharp_namespace = "Microservice.SubscriptionManager";

package subscriptionProto;

service SubscriptionService {
  rpc GetAllSubscriptions (AllSubscriptionsRequest) returns (stream SubscriptionsReply);
  rpc GetActivatedSubscriptions (ActivatedSubscriptionsRequest) returns (stream SubscriptionsReply);
}

message AllSubscriptionsRequest {
}
message ActivatedSubscriptionsRequest {
	int32 modelId = 1;
}
message SubscriptionsReply {
   repeated SubscriptionProto subscriptions = 1;
}

message SubscriptionProto {
  int32 id = 1;
  string name = 2;
  string price = 3;
  string functionalAccess = 4;
}
